--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.1",
+    "moment": "^2.20.1",
     "prop-types": ">=15.5",
     "react": ">=15.5",
     "react-dom": ">=15.5"
